--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: multi-speciality-hospital CI
 
 on:
   push:
-    branches: ["develop"]
+    branches: ["development"]
   pull_request:
-    branches: ["develop"]
+    branches: ["development"]
 
 jobs:
   build:
