--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: multi-speciality-hospital CI
 
 on:
   push:
-    branches: ["development"]
+    branches: ["development", "MSH*"]
   pull_request:
     branches: ["development"]
 
