Updated terraform state

--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -16,6 +16,11 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
+      - name: Create S3 bucket for remote terraform state with bucket name in envrionment variable
+        env:
+          BUCKET_NAME: ${{ secrets.MSH_TERRAFORM_STATE_BUCKET }}
+        run: |
+          aws s3api create-bucket --bucket ${{ env.BUCKET_NAME }} --region us-east-1
       - name: checkout repository
         uses: actions/checkout@v2
       - name: Set up Terraform
