configured terraform state

--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -34,4 +34,4 @@ jobs:
           terraform fmt -check
           terraform validate
           terraform plan
-          terraform destroy -auto-approve
+          terraform apply -auto-approve
