--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -23,8 +23,7 @@ jobs:
           aws s3api create-bucket --bucket ${{ env.BUCKET_NAME }} --region us-east-1
       - name: Create DynamoDB table for terraform state locking
         run: |
-          aws dynamodb create-table \
-          --table-name msh-terraform-lock-table-dev
+          aws dynamodb create-table --table-name msh-terraform-lock-table-dev
       - name: checkout repository
         uses: actions/checkout@v2
       - name: Set up Terraform
@@ -39,4 +38,6 @@ jobs:
           terraform validate
           terraform plan -lock=false
           terraform apply -auto-approve
-      - name: Select terraform workspace
+      - name: Upload Terraform state to S3
+        run: |
+          aws s3 cp terraform.tfstate s3://${{ secrets.MSH_TERRAFORM_STATE_BUCKET }}/terraform.tfstate
