--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -23,7 +23,11 @@ jobs:
           aws s3api create-bucket --bucket ${{ env.BUCKET_NAME }} --region us-east-1
       - name: Create DynamoDB table for terraform state locking
         run: |
-          aws dynamodb create-table --table-name msh-terraform-lock-table-dev
+          aws dynamodb create-table --table-name msh-terraform-lock-table-dev \
+          --region us-east-1 \
+          --billing-mode PAY_PER_REQUEST \
+          --attribute-definitions AttributeName=LockID,AttributeType=S \
+          --key-schema AttributeName=LockID,KeyType=HASH \
       - name: checkout repository
         uses: actions/checkout@v2
       - name: Set up Terraform
