--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -44,4 +44,4 @@ jobs:
           terraform apply -auto-approve
       - name: Upload Terraform state to S3
         run: |
-          aws s3 cp terraform.tfstate s3://${{ secrets.MSH_TERRAFORM_STATE_BUCKET }}/terraform.tfstate
+          aws s3 cp terraform.tfstate s3://${{ secrets.MSH_TERRAFORM_STATE_BUCKET }}
