--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -21,13 +21,17 @@ jobs:
           BUCKET_NAME: ${{ secrets.MSH_TERRAFORM_STATE_BUCKET }}
         run: |
           aws s3api create-bucket --bucket ${{ env.BUCKET_NAME }} --region us-east-1
-      - name: Create DynamoDB table for terraform state locking
+      - name: Create DynamoDB table for terraform state locking if it does not exist
+        env:
+          LOCK_TABLE_NAME: msh-terraform-lock-table-dev
         run: |
-          aws dynamodb create-table --table-name msh-terraform-lock-table-dev \
-          --region us-east-1 \
-          --billing-mode PAY_PER_REQUEST \
-          --attribute-definitions AttributeName=LockID,AttributeType=S \
-          --key-schema AttributeName=LockID,KeyType=HASH \
+          if ! aws dynamodb describe-table --table-name ${{ env.LOCK_TABLE_NAME }} > /dev/null 2>&1; then
+            aws dynamodb create-table \
+              --table-name ${{ env.LOCK_TABLE_NAME }} \
+              --attribute-definitions AttributeName=LockID,AttributeType=S \
+              --key-schema AttributeName=LockID,KeyType=HASH \
+              --billing-mode PAY_PER_REQUEST
+          fi
       - name: checkout repository
         uses: actions/checkout@v2
       - name: Set up Terraform
