--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,6 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
+
+  terraform-pipeline:
+    uses: ./.github/workflows/terraform-pipeline.yml
