--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -1,6 +1,7 @@
 name: multi-speciality-hospital infrastructure CI
 
 on:
+  workflow_call:
   push:
     branches: ["master", "development", "MSH*"]
   pull_request:
