--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -1,10 +1,11 @@
 name: Build
+
 on:
-  push:
-    branches:
-      - development
-  pull_request:
-    types: [opened, synchronize, reopened]
+  workflow_call:
+    secrets:
+      SONAR_TOKEN:
+        required: true
+
 jobs:
   sonarqube:
     name: SonarQube
