--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["development", "MSH*"]
   pull_request:
-    branches: ["development"]
+    branches: ["master", "development"]
     types: [opened, synchronize, reopened]
 
 jobs:
