--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -38,18 +38,18 @@ jobs:
           fi
       - name: checkout repository
         uses: actions/checkout@v2
-      - name: Run KICS scan on Terraform
-        uses: checkmarx/kics-action@v1.7.0
-        with:
-          path: infrastructure/terraform
-          fail_on: high
-          output_path: kics-results
-      - name: Upload KICS scan results
-        uses: actions/upload-artifact@v4
-        with:
-          name: kics-results
-          path: kics-results
-      - name: Set up Terraform
+      # - name: Run KICS scan on Terraform
+      #   uses: checkmarx/kics-action@v1.7.0
+      #   with:
+      #     path: infrastructure/terraform
+      #     fail_on: high
+      #     output_path: kics-results
+      # - name: Upload KICS scan results
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: kics-results
+      #     path: kics-results
+      # - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.5.0
