--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: multi-speciality-hospital CI
+name: multi-speciality-hospital CI/CD
 
 on:
   push:
-    branches: ["development", "MSH*"]
+    branches: ["master", "development", "MSH*"]
   pull_request:
     branches: ["master", "development"]
     types: [opened, synchronize, reopened]
@@ -31,18 +31,21 @@ jobs:
     secrets:
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  terraform-pipeline:
-    uses: ./.github/workflows/terraform-pipeline.yml
+  infrastructure-pipeline:
+    uses: ./.github/workflows/infrastructure-pipeline.yml
     needs: sonar-analysis
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       MSH_TERRAFORM_STATE_BUCKET: ${{ secrets.MSH_TERRAFORM_STATE_BUCKET }}
+      MSH_TERRAFORM_STATE_LOCK_TABLE: ${{ secrets.MSH_TERRAFORM_STATE_LOCK_TABLE }}
+    with:
+      destroy: false
 
   docker-build-and-push:
     runs-on: ubuntu-latest
-    needs: terraform-pipeline
-    environment: development
+    needs: infrastructure-pipeline
+    environment: dev
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
