--- a/.github/workflows/infrastructure-pipeline.yml
+++ b/.github/workflows/infrastructure-pipeline.yml
@@ -29,17 +29,17 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Create S3 bucket for remote terraform state with bucket name in envrionment variable
-        # env:
-        #   BUCKET_NAME: ${{ secrets.MSH_TERRAFORM_STATE_BUCKET }}
+        env:
+          BUCKET_NAME: ${{ vars.MSH_TERRAFORM_STATE_BUCKET }}
         run: |
-          aws s3api create-bucket --bucket ${{ secrets.MSH_TERRAFORM_STATE_BUCKET }} --region us-east-1
+          aws s3api create-bucket --bucket ${{ env.BUCKET_NAME }} --region us-east-1
       - name: Create DynamoDB table for terraform state locking if it does not exist
-        # env:
-        #   LOCK_TABLE_NAME: ${{ secrets.MSH_TERRAFORM_STATE_LOCK_TABLE }}
+        env:
+          LOCK_TABLE_NAME: ${{ vars.MSH_TERRAFORM_STATE_LOCK_TABLE }}
         run: |
-          if ! aws dynamodb describe-table --table-name ${{ secrets.MSH_TERRAFORM_STATE_LOCK_TABLE }} > /dev/null 2>&1; then
+          if ! aws dynamodb describe-table --table-name ${{ env.LOCK_TABLE_NAME }} > /dev/null 2>&1; then
             aws dynamodb create-table \
-              --table-name ${{ secrets.MSH_TERRAFORM_STATE_LOCK_TABLE }} \
+              --table-name ${{ env.LOCK_TABLE_NAME }} \
               --attribute-definitions AttributeName=LockID,AttributeType=S \
               --key-schema AttributeName=LockID,KeyType=HASH \
               --billing-mode PAY_PER_REQUEST
