--- a/.github/workflows/infrastructure-pipeline.yml
+++ b/.github/workflows/infrastructure-pipeline.yml
@@ -47,10 +47,10 @@ jobs:
       - name: checkout repository
         uses: actions/checkout@v2
       - name: Run KICS scan on Terraform
-        uses: checkmarx/kics-action@v1.7.0
+        uses: checkmarx/kics-github-action@v2.1.10
         with:
           path: infrastructure/terraform
-          fail_on: high
+          fail_on: high, medium
           output_path: kics-results
       - name: Upload KICS scan results
         uses: actions/upload-artifact@v4
