--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,14 +54,14 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ap-south-1
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
       - name: Get ECR repository URI
         id: ecr-uri
         run: |
-          URI=$(aws ecr describe-repositories --repository-names msh-ecr-repo --region us-east-1 --query 'repositories[0].repositoryUri' --output text)
+          URI=$(aws ecr describe-repositories --repository-names msh-ecr-repo --region ap-south-1 --query 'repositories[0].repositoryUri' --output text)
           echo "ECR_URI=$URI" >> $GITHUB_ENV
       - name: Build Docker image
         run: |
