--- a/.github/workflows/infrastructure-pipeline.yml
+++ b/.github/workflows/infrastructure-pipeline.yml
@@ -32,13 +32,8 @@ jobs:
         env:
           BUCKET_NAME: ${{ vars.MSH_TERRAFORM_STATE_BUCKET }}
         run: |
-          if ! aws s3api head-bucket --bucket ${{ env.BUCKET_NAME }} --region ap-south-1 2>/dev/null; then
-            echo "Bucket does not exist, creating it now..."
-            # Create the bucket if it does not exist
+          if ! aws s3api head-bucket --bucket ${{ env.BUCKET_NAME }} > /dev/null 2>&1; then
             aws s3api create-bucket --bucket ${{ env.BUCKET_NAME }} --region ap-south-1 --create-bucket-configuration LocationConstraint=ap-south-1
-          else
-            echo "Bucket already exists, skipping creation."
-            exit 0
           fi
 
       - name: Create DynamoDB table for terraform state locking if it does not exist
