--- a/.github/workflows/infrastructure-pipeline.yml
+++ b/.github/workflows/infrastructure-pipeline.yml
@@ -49,17 +49,17 @@ jobs:
           fi
       - name: checkout repository
         uses: actions/checkout@v2
-      - name: Run KICS scan on Terraform
-        uses: checkmarx/kics-github-action@v2.1.10
-        with:
-          path: infrastructure/terraform
-          fail_on: high
-          output_path: kics-results
-      - name: Upload KICS scan results
-        uses: actions/upload-artifact@v4
-        with:
-          name: kics-results
-          path: kics-results
+      # - name: Run KICS scan on Terraform
+      #   uses: checkmarx/kics-github-action@v2.1.10
+      #   with:
+      #     path: infrastructure/terraform
+      #     fail_on: high
+      #     output_path: kics-results
+      # - name: Upload KICS scan results
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: kics-results
+      #     path: kics-results
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
