--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,9 +71,22 @@ jobs:
         run: |
           URI=$(aws ecr describe-repositories --repository-names msh_ecr_repo --region ap-south-1 --query 'repositories[0].repositoryUri' --output text)
           echo "ECR_URI=$URI" >> $GITHUB_ENV
+      - name: Set image tag
+        id: image-tag
+        run: echo "IMAGE_TAG=${GITHUB_SHA}" >> $GITHUB_ENV
       - name: Build Docker image
         run: |
-          docker build -t $ECR_URI:latest .
+          docker build -t $ECR_URI:${IMAGE_TAG} -t $ECR_URI:latest .
       - name: Push Docker image to ECR
         run: |
+          docker push $ECR_URI:${IMAGE_TAG}
           docker push $ECR_URI:latest
+      - name: Update ECS service with new image
+        uses: aws-actions/amazon-ecs-update-task-definition@v1
+        with:
+          task-definition: msh-ecs-task
+          container-name: msh-container
+          image: ${{ env.ECR_URI }}:${{ env.IMAGE_TAG }}
+          cluster: msh_ecs_cluster
+          service: msh_ecs_service
+          aws-region: ap-south-1
