--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,19 +74,19 @@ jobs:
       - name: Set image tag
         id: image-tag
         run: echo "IMAGE_TAG=${GITHUB_SHA}" >> $GITHUB_ENV
+
       - name: Build Docker image
         run: |
           docker build -t $ECR_URI:${IMAGE_TAG} -t $ECR_URI:latest .
+
       - name: Push Docker image to ECR
         run: |
           docker push $ECR_URI:${IMAGE_TAG}
           docker push $ECR_URI:latest
-      - name: Update ECS service with new image
-        uses: aws-actions/amazon-ecs-update-task-definition@v1
-        with:
-          task-definition: msh-ecs-task
-          container-name: msh-container
-          image: ${{ env.ECR_URI }}:${{ env.IMAGE_TAG }}
-          cluster: msh_ecs_cluster
-          service: msh_ecs_service
-          aws-region: ap-south-1
+
+      - name: Terraform Apply with new image tag
+        working-directory: infrastructure/terraform
+        run: terraform apply -auto-approve -var="image_tag=${IMAGE_TAG}"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
